# 2.5DPaint

./: .gitignore  CMakeLists.txt  README.md  clean_generate.sh
shaders/: default.frag  default.vert
src/: brush.h  brush_settings.h  brush_type.h  color.h  kernel_params.h  main.cpp  tests.cpp  tests.h
src/cuda/: cpu_painter.cpp  cpu_painter.h  gpu_painter.cu  gpu_painter.h  kernel.cu  kernel.h  kernel_cpu.cpp  kernel_cpu.h  painter.cpp  painter.h  utils.cu  utils.h
src/gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  previewglwidget.cpp  previewglwidget.h
src/painter/: cpu_painter.cpp  cpu_painter.h  gpu_painter.cu  gpu_painter.h  painter.cpp  painter.h  utils.cu
